--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,5 @@ rvm:
 env:
   - TEST_DIR=dir1
   - TEST_DIR=dir2
+  - TEST_DIR=dir3
 script: cd $TEST_DIR && bundle install --binstubs && bin/rspec --format doc
