Add dir to the travis.yml and fix the name in ruby-gemset.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ env:
   - TEST_DIR=dir1
   - TEST_DIR=dir2
   - TEST_DIR=dir3
+  - TEST_DIR=dir4
 script: cd $TEST_DIR && bundle install --binstubs && bin/rspec --format doc
