--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ env:
   - TEST_DIR=dir2
   - TEST_DIR=dir3
   - TEST_DIR=dir4
+  - TEST_DIR=dir5
 script: cd $TEST_DIR && bundle install --binstubs && bin/rspec --format doc
